fix creating category bug

--- a/app/views/tools/new.html.haml
+++ b/app/views/tools/new.html.haml
@@ -1,9 +1,13 @@
 = form_for(@tool) do |f| 
   = f.label :name 
   = f.text_field :name
+  %br/
   = f.label :price 
   = f.text_field :price 
+  %br/
   = f.label :quantity 
   = f.text_field :quantity 
+  %br/
+  = f.collection_select :category_id, Category.all, :id, :name
+  %br/
   = f.submit "create your tool" 
-
