category crud functionality w/ admin

--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -1,6 +1,6 @@
 %h5 Hello, admin!
 
-%ul
+%ul#category_list
  - Category.all.each do |category|
   %li
    = link_to category.name, admin_category_path(current_user, category)
