rip out rails views for single page React layer, also ripped out normal controller action for AJAX calls pinging internal endpoints. Still need to add update and delete functionality.

--- a/app/views/admin/tools/index.html.haml
+++ b/app/views/admin/tools/index.html.haml
@@ -1,7 +1,1 @@
-%h5 Tools by user:
-
-%ul#tools_chest
-  - Tool.all.each do |tool|
-    %li
-      = tool.name
-      \- #{tool.user.username}
+= react_component 'Main'
